SFDCProject/src/objects/Proposal__c.object
<CustomObject>
    <description>This represents a proposal to an opportunity with pricing information and other meta information related to the issuing of the proposal.</description>
    <fields>
        <fullName>ACH_Fee_Eligible__c</fullName>
        <label>ACH Fee Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>No Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACH_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AC_DC_Derate_Factor__c</fullName>
        <label>AC_DC Derate Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Upfront_Master__c</fullName>
        <description>The actual upfront payment for PowerPlan if master mode was used.</description>
        <label>Actual Upfront (Master)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_kWh_Rate_w_o_master__c</fullName>
        <description>The actuall kWh PPA rate for PowerPlan if master mode was used.</description>
        <label>Actual kWh Rate w/o master</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Customer_Credit_Report_Link__c</fullName>
        <formula>if(Additional_Customer_Credit__c != null &amp;&amp; Additional_Customer_Credit__c != &apos;&apos;, HYPERLINK(&apos;/apex/CreditCheck?id=&apos;+ Additional_Customer_Credit__c + &apos;&amp;ProposalId=&apos; + Id ,   Additional_Customer_Credit__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Customer Credit Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Customer_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Customer Credit</label>
        <referenceTo>Customer_Credit__c</referenceTo>
        <relationshipLabel>Proposals (Additional Customer Credit)</relationshipLabel>
        <relationshipName>Proposals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals (Additional Customer)</relationshipLabel>
        <relationshipName>Proposals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Insurance_Cost__c</fullName>
        <label>Additional Insurance Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_Tax_Dev_Fee__c</fullName>
        <description>The dev. fee after taxes.</description>
        <label>After-Tax Dev. Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_Tax_NPV_W__c</fullName>
        <description>The after-tax net-present-value/watt to SunRun.</description>
        <label>After-Tax NPV/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Length_ROI__c</fullName>
        <description>The return on investment for 18yr and 20yr PowerPlan agreements.</description>
        <label>Agreement Length ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agreement_Term_Years__c</fullName>
        <label>Agreement Term (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>The type of agreement proposed to the customer for Power Plan.</description>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Owned - Full Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Owned - Bank Financed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Electric__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the home is all-electric or basic.</description>
        <label>All Electric?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Monthly_Payment_Escalator__c</fullName>
        <label>Annual Monthly Payment Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Pre_Solar_kWh_Usage__c</fullName>
        <description>The total amount of electricity consumed in one year pre-solar.</description>
        <label>Annual kWh Usage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approx_Price_Watt_AC__c</fullName>
        <label>Approx Price/Watt AC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approx_Price_Watt_DC__c</fullName>
        <label>Approx Price/Watt DC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approximate_PV_Cost__c</fullName>
        <formula>EPC_Price__c * (4/10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approximate PV Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Usage__c</fullName>
        <label>April Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_kWh__c</fullName>
        <description>The total amount of electricity consumed in April pre-solar.</description>
        <label>April kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_AC_DC_derate_factor__c</fullName>
        <label>Array 1 AC DC derate factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_April_Shade__c</fullName>
        <description>The percentage of shade in April for Array 1.</description>
        <label>Array 1 April Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_August_Shade__c</fullName>
        <description>The percentage of shade in August for array 1.</description>
        <label>Array 1 August Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_Azimuth__c</fullName>
        <description>The azimuth associated with array 1.</description>
        <label>Array 1 Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_CEC_AC_Rating__c</fullName>
        <label>Array 1 CEC AC Rating</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_December_Shade__c</fullName>
        <description>The percentage of shade in December for array 1.</description>
        <label>Array 1 December Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_February_Shade__c</fullName>
        <description>The percentage of shade in February for Array 1.</description>
        <label>Array 1 February Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate whether array 1 is a ground mount.</description>
        <label>Array 1 Ground Mount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_1_Inverter_Type__c</fullName>
        <description>The first inverter on the given system.</description>
        <inlineHelpText>The first inverter on the given system.</inlineHelpText>
        <label>Array 1 Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_1_January_Shade__c</fullName>
        <description>The percentage of shade in January for Array 1.</description>
        <label>Array 1 January Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_July_Shade__c</fullName>
        <description>The percentage of shade in July for array 1.</description>
        <label>Array 1 July Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_June_Shade__c</fullName>
        <description>The percentage of shade in May for array 1.</description>
        <label>Array 1 June Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_March_Shade__c</fullName>
        <description>The percentage of shade in March for array 1.</description>
        <label>Array 1 March Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_May_Shade__c</fullName>
        <description>The percentage of shade in May for array 1.</description>
        <label>Array 1 May Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_Mounting_Method__c</fullName>
        <description>The type of racking used to mount the panels.</description>
        <label>Array 1 Mounting Method</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_1_No_of_Inverters__c</fullName>
        <description>The number of inverters in array 1.</description>
        <label>Array 1 No. of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_No_of_Panels__c</fullName>
        <description>Number of panels in Array 1</description>
        <label>Array 1 No. of Panels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_November_Shade__c</fullName>
        <description>The percentage of shade in November for array 1.</description>
        <label>Array 1 November Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_October_Shade__c</fullName>
        <description>The percentage of shade in October for array 1.</description>
        <label>Array 1 October Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_1_Panel_Type__c</fullName>
        <description>The first array of panels on the given system.</description>
        <inlineHelpText>The first array of panels on the given system.</inlineHelpText>
        <label>Array 1 Panel Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_1_Pitch__c</fullName>
        <description>The mounting pitch associated with array 1.</description>
        <label>Array 1 Pitch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_1_Production_Yr_1__c</fullName>
        <description>The kWh production from array 1 in year 1.</description>
        <label>Array 1 Production Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_1_September_Shade__c</fullName>
        <description>The percentage of shade in September for array 1.</description>
        <label>Array 1 September Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_AC_DC_derate_factor__c</fullName>
        <label>Array 2 AC DC derate factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_April_Shade__c</fullName>
        <description>The percentage of shade in April for array 2.</description>
        <label>Array 2 April Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_August_Shade__c</fullName>
        <description>The percentage of shade in August for array 2.</description>
        <label>Array 2 August Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_Azimuth__c</fullName>
        <description>The azimuth associated with array 2.</description>
        <label>Array 2 Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_CEC_AC_Rating__c</fullName>
        <label>Array 2 CEC AC Rating</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_December_Shade__c</fullName>
        <description>The percentage of shade in December for array 2.</description>
        <label>Array 2 December Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_February_Shade__c</fullName>
        <description>The percentage of shade in February for array 2.</description>
        <label>Array 2 February Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether array 2 is a ground mount</description>
        <label>Array 2 Ground Mount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_2_Inverter_Type__c</fullName>
        <description>The second inverter on the system.</description>
        <inlineHelpText>The second inverter on the system.</inlineHelpText>
        <label>Array 2 Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_2_January_Shade__c</fullName>
        <description>The percentage of shade in January for array 2.</description>
        <label>Array 2 January Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_July_Shade__c</fullName>
        <description>The percentage of shade in July for array 2.</description>
        <label>Array 2 July Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_June_Shade__c</fullName>
        <description>The percentage of shade in June for array 2.</description>
        <label>Array 2 June Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_March_Shade__c</fullName>
        <description>The percentage of shade in March for array 2.</description>
        <label>Array 2 March Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_May_Shade__c</fullName>
        <description>The percentage of shade in May for array 2.</description>
        <label>Array 2 May Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_Mounting_Method__c</fullName>
        <description>The method used to mount the array.</description>
        <label>Array 2 Mounting Method</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_2_No_of_Inverters__c</fullName>
        <description>The number of inverters in array 2.</description>
        <label>Array 2 No. of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_No_of_Panels__c</fullName>
        <description>Number of panels in the second array.</description>
        <label>Array 2 No. of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_November_Shade__c</fullName>
        <description>The percentage of shade in November for array 2.</description>
        <label>Array 2 November Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_October_Shade__c</fullName>
        <description>The percentage of shade in October for array 2.</description>
        <label>Array 2 October Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_2_Panel_Type__c</fullName>
        <description>The second array of panels used on the system.</description>
        <inlineHelpText>The second array of panels used on the system.</inlineHelpText>
        <label>Array 2 Panel Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_2_Pitch__c</fullName>
        <description>The mounting pitch associated with array 2.</description>
        <label>Array 2 Pitch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_2_Production_Yr_1__c</fullName>
        <description>The kwh production for array 2 in year 1.</description>
        <label>Array 2 Production Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_2_September_Shade__c</fullName>
        <description>The percentage of shade in September for array 2.</description>
        <label>Array 2 September Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_AC_DC_derate_factor__c</fullName>
        <label>Array 3 AC DC derate factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_April_Shade__c</fullName>
        <description>The percentage of shade in April for array 3.</description>
        <label>Array 3 April Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_August_Shade__c</fullName>
        <description>The percentage of shade in August for array 3.</description>
        <label>Array 3 August Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_Azimuth__c</fullName>
        <description>The azimuth associated with array 3.</description>
        <label>Array 3 Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_CEC_AC_Rating__c</fullName>
        <label>Array 3 CEC AC Rating</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_December_Shade__c</fullName>
        <description>The percentage of shade in December for array 3.</description>
        <label>Array 3 December Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_February_Shade__c</fullName>
        <description>The percentage of shade in February for array 3.</description>
        <label>Array 3 February Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether array 3 is a ground mount</description>
        <label>Array 3 Ground Mount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_3_Inverter_Type__c</fullName>
        <description>The third inverter on the system.</description>
        <inlineHelpText>The third inverter on the system.</inlineHelpText>
        <label>Array 3 Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_3_January_Shade__c</fullName>
        <description>The percentage of shade in January for array 3.</description>
        <label>Array 3 January Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_July_Shade__c</fullName>
        <description>The percentage of shade in July for array 3.</description>
        <label>Array 3 July Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_June_Shade__c</fullName>
        <description>The percentage of shade in June for array 3.</description>
        <label>Array 3 June Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_March_Shade__c</fullName>
        <description>The percentage of shade in March for array 3.</description>
        <label>Array 3 March Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_May_Shade__c</fullName>
        <description>The percentage of shade in May for array 3.</description>
        <label>Array 3 May Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_Mounting_Method__c</fullName>
        <description>The method used to mount the array.</description>
        <label>Array 3 Mounting Method</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_3_No_of_Inverters__c</fullName>
        <description>The number of inverters in array 3.</description>
        <label>Array 3 No. of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_No_of_Panels__c</fullName>
        <description>Number of panels in array 3.</description>
        <label>Array 3 No. of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_November_Shade__c</fullName>
        <description>The percentage of shade in November for array 3.</description>
        <label>Array 3 November Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_October_Shade__c</fullName>
        <description>The percentage of shade in October for array 3.</description>
        <label>Array 3 October Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_3_Panel_Type__c</fullName>
        <description>The third array of panels on the system</description>
        <inlineHelpText>The third array of panels on the system</inlineHelpText>
        <label>Array 3 Panel Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_3_Pitch__c</fullName>
        <description>The mounting pitch associated with array 3.</description>
        <label>Array 3 Pitch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_3_Production_Yr_1__c</fullName>
        <description>The kWh production for array 3 in year 1.</description>
        <label>Array 3 Production Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_3_September_Shade__c</fullName>
        <description>The percentage of shade in September for array 3.</description>
        <label>Array 3 September Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Built__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As Built</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Tax_Type__c</fullName>
        <label>Asset Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigne__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aug_Usage__c</fullName>
        <label>August Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_kWh__c</fullName>
        <description>The total amount of electricity consumed in August pre-solar.</description>
        <label>August kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Electric_Bill__c</fullName>
        <label>Avg Monthly Electric Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Electricity_Usage__c</fullName>
        <label>Avg Monthly Electricity Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avoided_Cost_of_Power__c</fullName>
        <description>The avoided cost of power by going Solar with SunRun</description>
        <inlineHelpText>The avoided cost of power by going Solar with SunRun</inlineHelpText>
        <label>Avoided Cost of Power</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Lease_Payment_Amount__c</fullName>
        <label>Base Lease Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Turnkey_Price__c</fullName>
        <description>The base turnkey price to be paid to the installer. Currently this is represented by the system gross cost variable.</description>
        <inlineHelpText>The base turnkey price to be paid to the installer. Currently this is represented by the system gross cost variable.</inlineHelpText>
        <label>Base Turnkey Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrightSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify BrightSave from others</description>
        <label>BrightSave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_able_as_Sold__c</fullName>
        <label>Build-able as Sold?</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Builder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyout_per_Watt__c</fullName>
        <label>Buyout per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1_Terms__c</fullName>
        <label>C1 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C2_Terms__c</fullName>
        <label>C2 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C3_Terms__c</fullName>
        <label>C3 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVV__c</fullName>
        <label>CVV</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Pre_Buy_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Grant Pre-Buy Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Order_Cycle_Time__c</fullName>
        <formula>(Revised_SR_Signoff__c -  Date_Time_Submitted__c)*24</formula>
        <label>Change Order Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Order_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the change order that was created from this proposal</description>
        <inlineHelpText>This is the change order that was created from this proposal</inlineHelpText>
        <label>Parent Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Order_Information__c</fullName>
        <label>Change Order Information</label>
        <picklist>
            <picklistValues>
                <fullName>CUSTOMER_CHANGE_ORDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC_CHANGE_ORDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FULL_PROPOSAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO_SIGNATURES_REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES_PARTNER_CHANGE_ORDER</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Order_Notes__c</fullName>
        <label>Change Order Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>